--- a/layout.html
+++ b/layout.html
@@ -2,16 +2,15 @@
 <meta charset="utf-8">
 <html ng-app>
 <head>
-	<title>Workouts</title>
+	<!-- <title>Workouts</title> -->
 	<script src="lib/angular.js"></script>
 	<script src="lib/angular-route.js"></script>
+
 	<script src="app.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="datepicker/css/datepicker.css">
-    <link rel="stylesheet" type="text/css" href="datepicker/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="datepicker/css/bootstrap-responsive.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	
 </head>
 <style>
 .axis path,
@@ -34,29 +33,50 @@
 svg{
 	float: right;
 }
+
+body {
+   background:gray !important;
+}
+
 </style>
 <body>
 	<h1>Workouts</h1>
+		<script src="bower_components/bootstrap/js/button.js"></script>
+		<script src="bower_components/bootstrap/less/buttons.less"></script>
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="http://d3js.org/d3.v3.js"></script>
+		<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+  		<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     	<script type="text/javascript" src="exercises.js"></script>
     	<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-  		<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
-  		<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   		<link rel="stylesheet" href="/resources/demos/style.css">
 	<div class="exercises" ng-init="order='title'" ng-controller="ExerciseControl">
-		<input type="text" ng-model="newExercise" placeholder="Enter new exercise">
-		<input type="datetime">
-		<button ng-click="order='created_at'">Recently Added</button>
-		<button ng-click="order='updated_at'">Recently Updated</button>
-		<button ng-click="order='title'">Name of Exercise</button>
-		<div>{{newExercise}}</div>
-		<input type="text" ng-model="weight" placeholder="Enter max weight or reps">
-		<input type="text" id="datepicker" placeholder="Select date">
+
+		<div class="sorting">
+			<input type="text" ng-model="newExercise" placeholder="Enter new exercise">
+			<input type="submit" class="btn btn-success" value="Add New Exercise"/>
+		</div>
+		<br>
+		<div>
+			Sort By:
+		<button ng-click="order='created_at'" class="btn btn-primary">Recently Added<i class="icon-white icon-resize-vertical"></i></button>
+		<button ng-click="order='updated_at'" class="btn btn-primary">Recently Updated</button>
+		<button ng-click="order='title'" class="btn btn-primary">Name of Exercise</button>
+		</div>
+		<br><br>
+		<div class="oneExercise">
+			{{newExercise}}
+			<input type="text" ng-model="weight" placeholder="Enter max weight or reps">
+			<input type="text" id="datepicker" placeholder="Select date">
+		</div>
+		
 		<div class="exercise" ng-repeat="exercise in exercises | filter: search | orderBy:order">
 			<div class="info">
 				<div>{{exercise.title}}</div>
 				<div class="title">{{exercise.weight}}</div>
-				<input type="text" ng-model="weight" placeholder="Enter max weight or reps">
+				<input type="text" ng-model="weight" placeholder="Max weight or reps">
 				<input type="text" id="datepicker" placeholder="Select date">
 			</div>
 		</div>
@@ -138,7 +158,7 @@ d3.tsv("http://127.0.0.1:8080/", function(error, data) {
     .attr("text-anchor", "middle")  
     .style("font-size", "16px") 
     .style("text-decoration", "underline")  
-    .text("" + {{exercise.title}} + "")
+    .text("Exercise")
     .style("font-size", "16px")
 
   svg.append("path")
