--- a/layout.html
+++ b/layout.html
@@ -32,14 +32,20 @@
 
 svg{
 	float: right;
+	background-color: rgba(255,255,255,0.4);
 }
 
 body {
    background:gray !important;
 }
 
+.innerBody {
+	margin: 50px;
+}
+
 </style>
 <body>
+	<div class="innerBody">
 	<h1>Workouts</h1>
 		<script src="bower_components/bootstrap/js/button.js"></script>
 		<script src="bower_components/bootstrap/less/buttons.less"></script>
@@ -168,5 +174,6 @@ d3.tsv("http://127.0.0.1:8080/", function(error, data) {
 });
 
 </script>
+</div>
 </body>
 </html>
