--- a/layout.html
+++ b/layout.html
@@ -101,8 +101,8 @@ function ExerciseControl($scope, $http) {
 $(function() {
     $( "#datepicker" ).datepicker();
 });
-
-$('.exercise').each(function() {
+$(document).ready(function() {
+    $('.exercise').each(function() {
 var margin = {top: 50, right: 50, bottom: 50, left: 50},
     width = 480 - margin.left - margin.right,
     height = 250 - margin.top - margin.bottom;
@@ -174,6 +174,8 @@ d3.tsv("http://127.0.0.1:8080/", function(error, data) {
 });
 
 })
+})
+
 
 
 
